Update favorite controller and swagger
